--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,10 @@ repositories {
 
 
 dependencies {
-	compileOnly 'org.projectlombok:lombok:1.18.4'
+
+	compileOnly('org.projectlombok:lombok:1.18.4')
+	implementation('org.hibernate.validator:hibernate-validator-annotation-processor:6.0.13.Final')
+	implementation('org.hibernate.validator:hibernate-validator:6.0.13.Final')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
