--- a/build.gradle
+++ b/build.gradle
@@ -31,4 +31,5 @@ dependencies {
 	implementation('org.hibernate.validator:hibernate-validator:6.0.13.Final')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	compile 'com.google.code.gson:gson:2.8.5'
 }
