--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,19 @@ repositories {
 	mavenCentral()
 }
 
-
 dependencies {
-
-	compileOnly('org.projectlombok:lombok:1.18.4')
 	implementation('org.hibernate.validator:hibernate-validator-annotation-processor:6.0.13.Final')
 	implementation('org.hibernate.validator:hibernate-validator:6.0.13.Final')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	compile 'com.google.code.gson:gson:2.8.5'
+
+	compileOnly 'org.projectlombok:lombok:1.18.4'
+	annotationProcessor 'org.projectlombok:lombok:1.18.4'
+}
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'pl.mkolasinski.Quest1.Quest1Application'
+	}
 }
